--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+:root {
+  --main-color: #1352ff;
+  --dark-color: #030324;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: var(--dark-color);
+}
+
+.btn_round {
+  background-color: var(--main-color);
+}
+
+.btn_round,
+.btn_round_outline {
+  border: none;
+  color: #fff;
+  max-width: 200px;
+  width: 100%;
+  min-height: 55px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-decoration: none;
+  border-radius: 100px;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+
+.btn_round_outline {
+  background-color: transparent;
+  border: 2px solid #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn_round:hover,
+.btn_round_outline:hover {
+  color: #ffffffe8;
+  background-color: #0042f7;
+  box-shadow: rgba(38, 23, 247, 0.589) 0px 4px 12px;
+  border-color: #0042f7;
 }
