--- a/src/components/Dashboard/DashBoardNav/DashBoardNav.css
+++ b/src/components/Dashboard/DashBoardNav/DashBoardNav.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   padding: 15px 20px;
   box-shadow: 1px 1px 3px rgb(0 0 0 / 10%);
-  background-color: #1d1ba8;
+  background-color: var(--dark-color-light);
   transition: all .6s cubic-bezier(.945, .02, .27, .665);
   margin: 20px 20px 20px 270px;
   border-radius: 10px;
@@ -20,7 +20,7 @@
   justify-content: center;
   width: 50px;
   height: 40px;
-  background-color: #8068ea21;
+  background-color: var(--main-color);
   border-radius: 7px;
   cursor: pointer;
 }
