--- a/src/components/Dashboard/Sidebar/Sidebar.css
+++ b/src/components/Dashboard/Sidebar/Sidebar.css
@@ -2,12 +2,17 @@
   text-align: center;
 }
 
-.sidebar_logo>h4 {
-  color: #ffffff;
-  font-size: 38px;
-  font-weight: 600;
+
+.sidebar_logo span,
+.sidebar_logo h3 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
   margin: 0;
-  margin-left: 5px;
+}
+
+.sidebar_logo span {
+  color: var(--main-color);
 }
 
 .back_btn {
@@ -30,17 +35,18 @@
 
 
 .sidebar_link:hover {
-  background-color: rgba(126, 126, 248, 0.185);
+  background-color: var(--main-color);
 }
 
 /* .sidebar_link.active {
   background-color: rgba(255, 227, 227, 0.4);
 }  */
-
+.sidebar_link>button>i,
 .sidebar_link>a>i {
   width: 20px;
 }
 
+.sidebar_link>button,
 .sidebar_link>a {
   padding: 8px 10px;
   display: flex;
@@ -48,14 +54,20 @@
   width: 100%;
   text-decoration: none;
   border-radius: 7px;
-  font-size: 16px !important;
+  font-size: 14px !important;
 }
 
 .sidebar_link>a.active {
-  background-color: rgba(255, 227, 227, 0.4);
+  background-color: var(--main-color);
 }
 
+.sidebar_link>button {
+  background-color: transparent;
+  border: none;
+}
 
+.sidebar_link>button,
+.sidebar_link>button>div>i,
 .sidebar_link>a,
 .sidebar_link>a>div>i {
   transition: all 0.3s ease-in-out;
@@ -63,6 +75,7 @@
   color: #ffffff;
 }
 
+.sidebar_link>button>.sidebar_icon_div,
 .sidebar_link>a>.sidebar_icon_div {
   display: flex;
   align-items: center;
@@ -70,6 +83,7 @@
   width: 36px;
 }
 
+.sidebar_link:hover>button,
 .sidebar_link:hover>a {
   letter-spacing: 0.5px;
 }
