--- a/src/components/shared/Navigation/Navigation.css
+++ b/src/components/shared/Navigation/Navigation.css
@@ -10,12 +10,16 @@
   width: 100%;
 }
 
+.nav_logo span,
 .nav_logo h3 {
   color: #fff;
-  font-size: 20px;
-  font-weight: 900;
-  letter-spacing: 4px;
+  font-size: 28px;
+  font-weight: 800;
   margin: 0;
+}
+
+.nav_logo span {
+  color: var(--main-color);
 }
 
 .nav_menu {
@@ -41,15 +45,20 @@
 
 .sign_up .fas {
   transition: transform 0.3s ease;
-  transform: translateX(4px);
-}
-
-.sign_up:hover .fas {
   transform: translateX(10px);
 }
 
-.nav_items>.nav_link:hover {
+.sign_up:hover {
   color: var(--main-color);
+}
+
+.sign_up:hover .fas {
+  transform: translateX(4px);
+  color: var(--main-color);
+}
+
+.nav_items>.nav_link:hover {
+  letter-spacing: 1px;
 }
 
 .connect {
@@ -88,7 +97,6 @@
   height: 40px;
   object-fit: cover;
   border-radius: 50%;
-  border: 1px solid var(--light-grey-color);
   cursor: pointer;
 }
 
@@ -98,15 +106,35 @@
   right: 0;
   min-width: 150px;
   width: 100%;
-  height: 110px;
+  /* height: 110px; */
   border-radius: 14px;
   padding: 10px;
-  background-color: #26a68c;
+  background-color: var(--main-color);
   display: none;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   color: #ffffff;
+}
+
+.view_profile_link {
+  color: #fff;
+  padding: 10px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+
+.view_profile_link .fas {
+  font-size: 18px;
+  margin-left: 5px;
+}
+
+.view_profile_link:hover {
+  color: var(--main-color);
 }
 
 .drop_down_menu.active {
@@ -124,9 +152,6 @@
   font-size: 18x;
 }
 
-.log_out {
-  margin-left: 0 !important;
-}
 
 .dashboard_btn_link {
   display: none;
@@ -157,7 +182,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(16, 11, 78);
+    background-color: var(--main-color);
     position: fixed;
     top: 0;
     left: 0;
