--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -1,12 +1,13 @@
 .dashboard {
   display: flex;
   position: relative;
+  overflow-y: hidden;
 }
 
 .dashboard>aside {
   width: 250px;
   height: 100vh;
-  background-color: #1d1ba8;
+  background-color: var(--dark-color-light);
   overflow-y: auto;
   color: #fff;
   transition: all .6s cubic-bezier(.945, .02, .27, .665);
@@ -22,6 +23,7 @@
 
 .dashboard_wrapper {
   width: 100%;
+  height: 100vh;
 
 }
 
