--- a/src/components/Dashboard/ManageAllOrder/ManageAllOrder.css
+++ b/src/components/Dashboard/ManageAllOrder/ManageAllOrder.css
@@ -33,6 +33,27 @@
   color: #ddd;
 }
 
+.manage_all_order td {
+  padding: 0.8rem 1.6rem;
+}
+
 .dropdown .dropdown_content .dropdown_item:hover {
   background-color: #2c2c2c;
+}
+
+.btn_round.pending {
+  background-color: var(--main-color);
+  font-weight: 600;
+}
+
+.btn_round.on-going {
+  background-color: #ffb247;
+  color: #2c2c2c;
+  font-weight: 600;
+}
+
+.btn_round.done {
+  background-color: #59af8a;
+  color: #2c2c2c;
+  font-weight: 600;
 }
