--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -4,6 +4,31 @@
   overflow-y: hidden;
 }
 
+.dashboard::after {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, .4);
+  height: 100vh;
+  width: 100%;
+  z-index: 99;
+  transition: all 0.3s ease-in-out;
+  opacity: 1;
+  pointer-events: all;
+}
+
+.dashboard.active::after {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.aside {
+  z-index: 999;
+}
+
 .dashboard>aside {
   width: 250px;
   height: 100vh;
