--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,8 @@ body {
   max-width: 100%;
   height: auto;
   width: 100%;
+  height: 240px;
+  object-fit: cover;
 }
 
 .card_item>.img-fluid {
@@ -81,6 +83,18 @@ body {
 .fas.fa-info-circle {
   font-size: 20px;
   color: #00b6d2;
+}
+
+.status.pending {
+  color: #fa3263;
+}
+
+.status.done {
+  color: #59af8a;
+}
+
+.status.on-going {
+  color: #ffb247;
 }
 
 /* spinner */
@@ -107,10 +121,17 @@ body {
   pointer-events: all;
 }
 
+.swiper-pagination-bullet {
+  width: 16px !important;
+  height: 16px !important;
+}
+
 .spinner_wrapper {
   width: 200px;
   height: 200px;
 }
+
+
 
 @keyframes animation {
   0% {
